--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -423,15 +423,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQB-oK-7Df" customClass="NavigationBar" customModule="casadocodigo" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44" width="428" height="60"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="In0-49-v6s"/>
-                                </constraints>
-                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yaE-pB-foP">
-                                <rect key="frame" x="0.0" y="104" width="428" height="788.00000000000011"/>
+                                <rect key="frame" x="0.0" y="104" width="428" height="788"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8oz-bb-6Je" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="428" height="1485.3333333333333"/>
@@ -847,6 +840,23 @@
                                     <constraint firstItem="8oz-bb-6Je" firstAttribute="leading" secondItem="yaE-pB-foP" secondAttribute="leading" id="mLe-QF-9wL"/>
                                 </constraints>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQB-oK-7Df" customClass="NavigationBar" customModule="casadocodigo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="428" height="60"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="In0-49-v6s"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64E-5n-qJJ">
+                                <rect key="frame" x="356" y="820" width="56" height="56"/>
+                                <color key="backgroundColor" red="0.32156862749999998" green="0.48627450979999998" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="4VP-nY-M2M"/>
+                                    <constraint firstAttribute="width" constant="56" id="uSJ-va-Lna"/>
+                                </constraints>
+                                <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yVH-8t-8U7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -855,6 +865,8 @@
                             <constraint firstItem="lQB-oK-7Df" firstAttribute="leading" secondItem="yVH-8t-8U7" secondAttribute="leading" id="PSR-KK-QPG"/>
                             <constraint firstItem="yaE-pB-foP" firstAttribute="leading" secondItem="yVH-8t-8U7" secondAttribute="leading" id="RrY-xl-ico"/>
                             <constraint firstItem="lQB-oK-7Df" firstAttribute="top" secondItem="yVH-8t-8U7" secondAttribute="top" id="Ry9-uA-YCg"/>
+                            <constraint firstItem="yVH-8t-8U7" firstAttribute="bottom" secondItem="64E-5n-qJJ" secondAttribute="bottom" constant="16" id="c9L-Iu-eXM"/>
+                            <constraint firstItem="yVH-8t-8U7" firstAttribute="trailing" secondItem="64E-5n-qJJ" secondAttribute="trailing" constant="16" id="gcX-Wo-SmZ"/>
                             <constraint firstItem="yaE-pB-foP" firstAttribute="top" secondItem="lQB-oK-7Df" secondAttribute="bottom" id="gdW-Mx-4k5"/>
                             <constraint firstItem="lQB-oK-7Df" firstAttribute="trailing" secondItem="yVH-8t-8U7" secondAttribute="trailing" id="q6g-8C-VVh"/>
                             <constraint firstItem="yaE-pB-foP" firstAttribute="bottom" secondItem="yVH-8t-8U7" secondAttribute="bottom" id="qfp-HS-BPy"/>
@@ -870,6 +882,7 @@
                         <outlet property="contentSectionTitle" destination="3Z4-Be-P8a" id="JQ4-6h-scZ"/>
                         <outlet property="contentTextView" destination="Lj1-Bm-Hh0" id="OAV-JG-HzO"/>
                         <outlet property="coverImageView" destination="trr-IY-MOg" id="z8g-df-BKL"/>
+                        <outlet property="deletingButton" destination="64E-5n-qJJ" id="eIE-6N-Dpj"/>
                         <outlet property="ebookPrice" destination="7LF-04-soG" id="w17-73-Wam"/>
                         <outlet property="hardcoverPrice" destination="Ws6-2T-33c" id="ba8-eg-CoW"/>
                         <outlet property="navigationBar" destination="lQB-oK-7Df" id="eFB-pL-rJa"/>
@@ -1053,7 +1066,7 @@
                                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="31l-Tf-DBC">
                                                                     <rect key="frame" x="191" y="0.0" width="20" height="20"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                    <color key="tintColor" red="1" green="0.66666666669999997" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </button>
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
